--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 My first home page
-<img class="index-logo-srcnew" src="//www.baidu.com/img/baidu_jgylogo3.gif" alt="到百度首页" title="到百度首页">
+<img class="s_lg_img_gold_showre" src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo_top_86d58ae1.png" alt="到百度首页" title="到百度首页">
