--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 My first home page
-<img src="https://m.baidu.com/static/index/plus/plus_logo_web.png" alt="百度一下,你就知道">
+<html>
+
+<head>
+  <title> DMEC CLASS MATERIALS</title>
+</head>
+<body>
+  this is body
+</body>
+</html>
