--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@ My first home page
 </head>
 <body>
   this is body
+  <h1> DEMP CLASS</h1>
+  <h2>  COURSE IMFORMATION</h2>
+  <url>
+    <li></li>
+    </url>
+  <h3> SLIDES</h3>
 </body>
 </html>
