--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ My first home page
   <h1> DEMP CLASS</h1>
   <h2>  COURSE IMFORMATION</h2>
   <url>
-    <li></li>
+    <li>time 12/19</li>
+     <li>lectuer zhaoshengnan</li>
+     <li>location BSU</li>
     </url>
   <h3> SLIDES</h3>
 </body>
